--- a/Angular_05_components/tsconfig.json
+++ b/Angular_05_components/tsconfig.json
@@ -19,6 +19,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "strictPropertyInitialization": false,
+    "types": [
+      "@angular/localize"
+    ],
     "lib": [
       "ES2022",
       "dom"
